Fri Jul 26 18:30:14 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_memcpy): cast to int to suppress a warning.

Fri Jul 26 18:21:58 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_memcpy): try to enable optimization.
	  At least on my environments, I don't see any errors
	  with many trials. Please tell us if you find any GC bugs.

Fri Jul 26 17:49:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (fix_string_encoding): fix target encoding.  the
	  parameter `encoding' is not the target encoding but the original
	  encoding.

Fri Jul 26 14:05:19 2013  Zachary Scott  <e@zzak.io>

	* ext/fiddle/*: [DOC] More doc on dlopen and RTLD_DEFAULT from r42184

Fri Jul 26 13:08:53 2013  Zachary Scott  <e@zzak.io>

	* ext/fiddle/lib/fiddle.rb: [DOC] Document Fiddle.dlopen(nil)
	* ext/fiddle/handle.c: [DOC] Document Fiddle::Handle.new(nil)

Fri Jul 26 13:04:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_load_internal): use rb_load_file_str() to keep path
	  encoding.

	* load.c (rb_require_safe): search in OS path encoding for Windows.

	* ruby.c (rb_load_file_str): load file with keeping path encoding.

	* win32/file.c (rb_file_load_ok): use WCHAR type API assuming incoming
	  path is encoded in UTF-8.  [ruby-core:56136] [Bug #8676]

	* file.c (rb_str_encode_ospath): simplify using rb_str_conv_enc().

	* win32/file.c (fix_string_encoding): simplify with rb_str_conv_enc().

	* win32/file.c (convert_mb_to_wchar): use bare pointer instead of
	  VALUE, and remove useless argument.

Fri Jul 26 11:42:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rational.c (f_round_common): Rational is expected to be returned by
	  Rational#*, but mathn.rb breaks that assumption.  [ruby-core:56177]
	  [Bug #8687]

Fri Jul 26 01:37:45 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h: check defined(USE_RGENGC_LOGGING_WB_UNPROTECT)

Fri Jul 26 01:21:41 2013  NARUSE, Yui  <naruse@ruby-lang.org>
